# benchmark

./: CHANGELOG.md  README.md  benchmark.cabal  benchmarks.cabal  stack.yaml
benchmark/: Main.hs
benchmark/FromList/: Main.hs
benchmark/Output/: from_list.html  from_list.md  from_list_visual.md  unpack-overhead.md  unpack_overhead.html  unpack_overhead.md  unpack_overhead_visual.md  validateInput.md  validate_input.html  validate_input.md  validate_input_visual.md
benchmark/PackOverhead/: Main.hs
benchmark/ValidateInput/: Main.hs
src/: Benchmark.hs  Benchmarks.hs  FromList.hs  PackOverhead.hs  ValidateInput.hs
test/: Spec.hs
