cabal-version:       2.4
name:                benchmark
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/metaxis/benchmark#benchmark) for more details.
homepage:            https://github.com/metaxis/benchmark
bug-reports:         https://github.com/metaxis/benchmark/issues
license:             Apache-2.0
license-file:        LICENSE
author:              metaxis
maintainer:          metaxis <email>
copyright:           2021 metaxis
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/metaxis/benchmark.git

common common-options
  build-depends:       base ^>= 4.14.1.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Benchmark
  build-depends:       text
                     , containers
                     , attoparsec

test-suite benchmark-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  main-is:             Spec.hs
  build-depends:       benchmark
                     , hspec
                     , hedgehog
                     , hspec-hedgehog
                     , text


benchmark benchmark-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       benchmark
                     , text
                     , criterion

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
